--- a/language_translation_model.ipynb
+++ b/language_translation_model.ipynb
@@ -8,6 +8,9 @@
    },
    "outputs": [],
    "source": [
+    "# Adapted from:\n",
+    "# https://pytorch.org/tutorials/intermediate/seq2seq_translation_tutorial.html\n",
+    "\n",
     "# Translation with a sequence to sequence network and attention\n",
     "from __future__ import unicode_literals, print_function, division\n",
     "from io import open\n",
@@ -46,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "outputs": [],
    "source": [
     "SOS_token = 0\n",
@@ -74,6 +77,292 @@
     "            self.n_words += 1\n",
     "        else:\n",
     "            self.word2count[word] += 1\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "outputs": [],
+   "source": [
+    "# turn Unicode characters to ASCII\n",
+    "def unicodeToAscii(s):\n",
+    "    return ''.join(c for c in unicodedata.normalize('NFD', s)\\\n",
+    "                   if unicodedata.category(c) != 'Mn')\n",
+    "\n",
+    "# Lowercase, trim, and remove non-letter characters\n",
+    "def normalizeString(s):\n",
+    "    s = unicodeToAscii(s.lower().strip())\n",
+    "    s = re.sub(r\"([.!?])\", r\" \\1\", s)\n",
+    "    s = re.sub(r\"[^a-zA-Z.!?]+\", r\" \", s)\n",
+    "    return s"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "outputs": [],
+   "source": [
+    "# To read the data file we will split the file into\n",
+    "# lines, and then split lines into pairs.\n",
+    "def readLangs(lang1, lang2, reverse=False):\n",
+    "    print(\"Reading lines...\")\n",
+    "\n",
+    "    # Read the file and split into lines\n",
+    "    lines = open('data/%s-%s.txt' % (lang1, lang2), encoding='utf-8').\\\n",
+    "        read().strip().split('\\n')\n",
+    "    # Split every line into pairs and normalize\n",
+    "    pairs = [[normalizeString(s) for s in l.split('\\t')] for l in lines]\n",
+    "    # Reverse pairs, make Lang instances\n",
+    "    if reverse:\n",
+    "        pairs = [list(reversed(p)) for p in pairs]\n",
+    "        input_lang = Lang(lang2)\n",
+    "        output_lang = Lang(lang1)\n",
+    "    else:\n",
+    "        input_lang = Lang(lang1)\n",
+    "        output_lang = Lang(lang2)\n",
+    "    return input_lang, output_lang, pairs"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "outputs": [],
+   "source": [
+    "# we’ll trim the data set to only relatively short and simple sentences.\n",
+    "# Here the maximum length is 10 words (that includes ending punctuation) and\n",
+    "# we’re filtering to sentences that translate to the form “I am” or “He is” etc.\n",
+    "# (accounting for apostrophes replaced earlier).\n",
+    "MAX_LENGTH = 10\n",
+    "\n",
+    "eng_prefixes = (\"i am \", \"i m \",\n",
+    "                \"he is\", \"he s \",\n",
+    "                \"she is\", \"she s \",\n",
+    "                \"you are\", \"you re \",\n",
+    "                \"we are\", \"we re \",\n",
+    "                \"they are\", \"they re \")\n",
+    "\n",
+    "def filterPair(p):\n",
+    "    return len(p[0].split(' ')) < MAX_LENGTH and \\\n",
+    "        len(p[1].split(' ')) < MAX_LENGTH and \\\n",
+    "        p[1].startswith(eng_prefixes)\n",
+    "\n",
+    "def filterPairs(pairs):\n",
+    "    return [pair for pair in pairs if filterPair(pair)]\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reading lines...\n",
+      "Read 135842 sentence pairs\n",
+      "Trimmed to 10599 sentence pairs\n",
+      "Counting words...\n",
+      "Counted words:\n",
+      "fra 4345\n",
+      "eng 2803\n",
+      "['je suis assez occupe en realite .', 'i m fairly busy actually .']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Read text file and split into lines, split lines into pairs\n",
+    "# Normalize text, filter by length and content\n",
+    "# Make word lists from sentences in pairs\n",
+    "\n",
+    "def prepareData(lang1, lang2, reverse=False):\n",
+    "    input_lang, output_lang, pairs = readLangs(lang1, lang2, reverse)\n",
+    "    print(\"Read %s sentence pairs\" % len(pairs))\n",
+    "    pairs = filterPairs(pairs)\n",
+    "    print(\"Trimmed to %s sentence pairs\" % len(pairs))\n",
+    "    print(\"Counting words...\")\n",
+    "    for pair in pairs:\n",
+    "        input_lang.addSentence(pair[0])\n",
+    "        output_lang.addSentence(pair[1])\n",
+    "    print(\"Counted words:\")\n",
+    "    print(input_lang.name, input_lang.n_words)\n",
+    "    print(output_lang.name, output_lang.n_words)\n",
+    "    return input_lang, output_lang, pairs\n",
+    "\n",
+    "input_lang, output_lang, pairs = prepareData('eng', 'fra', True)\n",
+    "print(random.choice(pairs))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "outputs": [],
+   "source": [
+    "# Seq2Seq Model\n",
+    "# Encoder\n",
+    "class EncoderRNN(nn.Module):\n",
+    "    def __init__(self, input_size, hidden_size):\n",
+    "        super(EncoderRNN, self).__init__()\n",
+    "        self.hidden_size = hidden_size\n",
+    "\n",
+    "        self.embedding = nn.Embedding(input_size, hidden_size)\n",
+    "        self.gru = nn.GRU(hidden_size, hidden_size)\n",
+    "\n",
+    "    def forward(self, input, hidden):\n",
+    "        embedded = self.embedding(input).view(1, 1, -1)\n",
+    "        output = embedded\n",
+    "        output, hidden = self.gru(output, hidden)\n",
+    "        return output, hidden\n",
+    "\n",
+    "    def initHidden(self):\n",
+    "        return torch.zeros(1, 1, self.hidden_size, device=device)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "outputs": [],
+   "source": [
+    "# Decoder\n",
+    "class DecoderRNN(nn.Module):\n",
+    "    def __init__(self, hidden_size, output_size):\n",
+    "        super(DecoderRNN, self).__init__()\n",
+    "        self.hidden_size = hidden_size\n",
+    "\n",
+    "        self.embedding = nn.Embedding(output_size, hidden_size)\n",
+    "        self.gru = nn.GRU(hidden_size, hidden_size)\n",
+    "        self.out = nn.Linear(hidden_size, output_size)\n",
+    "        self.softmax = nn.LogSoftmax(dim=1)\n",
+    "\n",
+    "    def forward(self, input, hidden):\n",
+    "        output = self.embedding(input).view(1, 1, -1)\n",
+    "        output = F.relu(output)\n",
+    "        output, hidden = self.gru(output, hidden)\n",
+    "        output = self.softmax(self.out(output[0]))\n",
+    "        return output, hidden\n",
+    "\n",
+    "    def initHidden(self):\n",
+    "        return torch.zeros(1, 1, self.hidden_size, device=device)\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "outputs": [],
+   "source": [
+    "def indexesFromSentence(lang, sentence):\n",
+    "    return [lang.word2index[word] for word in sentence.split(' ')]\n",
+    "\n",
+    "def tensorFromSentence(lang, sentence):\n",
+    "    indexes = indexesFromSentence(lang, sentence)\n",
+    "    indexes.append(EOS_token)\n",
+    "    return torch.tensor(indexes, dtype=torch.long, device=device).view(-1, 1)\n",
+    "\n",
+    "def tensorsFromPair(pair):\n",
+    "    input_tensor = tensorFromSentence(input_lang, pair[0])\n",
+    "    target_tensor = tensorFromSentence(output_lang, pair[1])\n",
+    "    return (input_tensor, target_tensor)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "outputs": [],
+   "source": [
+    "# “Teacher forcing” is the concept of using the real target outputs as each next input,\n",
+    "# instead of using the decoder’s guess as the next input.\n",
+    "# Using teacher forcing causes it to converge faster but when the trained network is exploited,\n",
+    "# it may exhibit instability.\n",
+    "teacher_forcing_ratio = 0.5\n",
+    "\n",
+    "def train(input_tensor, target_tensor, encoder, decoder, encoder_optimizer, \\\n",
+    "          decoder_optimizer, criterion, max_length=MAX_LENGTH):\n",
+    "    encoder_hidden = encoder.initHidden()\n",
+    "    # zero optimizers\n",
+    "    encoder_optimizer.zero_grad()\n",
+    "    decoder_optimizer.zero_grad()\n",
+    "\n",
+    "    input_length = input_tensor.size(0)\n",
+    "    target_length = target_tensor.size(0)\n",
+    "\n",
+    "    encoder_outputs = torch.zeros(max_length, encoder.hidden_size, device=device)\n",
+    "\n",
+    "    loss = 0\n",
+    "\n",
+    "    for e_idx in range(input_length):\n",
+    "        encoder_output, encoder_hidden = encoder(input_tensor[e_idx], encoder_hidden)\n",
+    "        encoder_outputs[e_idx] = encoder_output[0, 0]\n",
+    "    decoder_input = torch.tensor([[SOS_token]], device=device)\n",
+    "    decoder_hidden = encoder_hidden\n",
+    "    use_teacher_forcing = True if random.random() < teacher_forcing_ratio else False\n",
+    "\n",
+    "    if use_teacher_forcing:\n",
+    "        # Teacher forcing: Feed the target as the next input\n",
+    "        for d_idx in range(target_length):\n",
+    "            decoder_output, decoder_hidden, decoder_attention = decoder(decoder_input, decoder_hidden, encoder_outputs)\n",
+    "            loss += criterion(decoder_output, target_tensor[d_idx])\n",
+    "            decoder_input = target_tensor[d_idx]  # Teacher forcing\n",
+    "    else:\n",
+    "        # Without teacher forcing: use its own predictions as the next input\n",
+    "        for di in range(target_length):\n",
+    "            decoder_output, decoder_hidden, decoder_attention = decoder(decoder_input, decoder_hidden, encoder_outputs)\n",
+    "            topv, topi = decoder_output.topk(1)\n",
+    "            decoder_input = topi.squeeze().detach()  # detach from history as input\n",
+    "\n",
+    "            loss += criterion(decoder_output, target_tensor[di])\n",
+    "            if decoder_input.item() == EOS_token:\n",
+    "                break\n",
+    "    loss.backward()\n",
+    "    encoder_optimizer.step()\n",
+    "    decoder_optimizer.step()\n",
+    "    return loss.item() / target_length"
    ],
    "metadata": {
     "collapsed": false,
